# agent-dev-demo

./: .env.example  .gitignore  README.md
app/: main.py
app/adapters/: __init__.py  state_adapters.py
app/agents/: private_chef_agent.py
app/api/: routes.py
app/core/: config.py
app/domain/: __init__.py  errors.py  models.py
app/graph/: state.py  workflow.py
app/schemas/: responses.py
app/services/: llm_service.py  ranking_service.py  tavily_service.py
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: private_chef_agent.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/graph/: state.py  workflow.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: llm_service.py  tavily_service.py
backend/tests/: test_agent.py  test_api.py
resources/: ai_private_chef_flow.drawio
tests/: test_agent.py  test_api.py  test_llm_service.py  test_rank_fallback.py  test_ranking_service.py
